force-app/main/default/objects/Vehicle_Information__c/Vehicle_Information__c.object-meta.xml
<CustomObject>
    <label>Vehicle Information</label>
    <nameField>
        <label>Vehicle number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>