force-app/main/default/objects/Vehicle_Information__c/fields/Guest_name__c.field-meta.xml
<CustomField>
    <fullName>Guest_name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guest name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle Informations</relationshipLabel>
    <relationshipName>Vehicle_Informations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>