force-app/main/default/objects/Vehicle_Information__c/fields/Needs_to_be_parked__c.field-meta.xml
<CustomField>
    <fullName>Needs_to_be_parked__c</fullName>
    <label>Needs to be parked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>